Fix gupnp_didl_lite_container_get_total_deleted_child_count

0 is a valid value for the property upnp:totalDeletedChildCount.
Return -1 instead of 0 when the property is not found.

Same behavior as res@updateCount.

https://bugzilla.gnome.org/show_bug.cgi?id=696837